--- a/package.json
+++ b/package.json
@@ -10,22 +10,36 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.14.1",
     "react": "17.0.1",
-    "react-native": "0.64.0"
+    "react-jss": "^10.6.0",
+    "react-native": "0.64.0",
+    "react-redux": "^7.2.3",
+    "react-router-native": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "socket.io-client": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.13.12",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.20",
+    "@types/react": "^17.0.3",
     "@types/react-native": "^0.64.0",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-native": "^5.1.0",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-only-warn": "^1.0.2",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
