--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.1",
     "react-jss": "^10.6.0",
     "react-native": "0.64.0",
+    "react-native-progress": "^4.1.2",
     "react-redux": "^7.2.3",
     "react-router-native": "^5.2.0",
     "redux": "^4.0.5",
