--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
+    "history": "^5.0.0",
+    "native-base": "^2.15.2",
     "react": "17.0.1",
     "react-jss": "^10.6.0",
     "react-native": "0.64.0",
@@ -33,8 +35,8 @@
     "@types/react-router-native": "^5.1.0",
     "@types/react-test-renderer": "^16.9.2",
     "@types/redux": "^3.6.0",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
+    "@typescript-eslint/eslint-plugin": "4.0.1",
+    "@typescript-eslint/parser": "4.0.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
