--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.64.0",
     "react-native-progress": "^4.1.2",
     "react-redux": "^7.2.3",
+    "react-router": "^5.2.0",
     "react-router-native": "^5.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
