--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-jss": "^10.6.0",
     "react-native": "0.64.0",
     "react-native-progress": "^4.1.2",
+    "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
     "react-router-native": "^5.2.0",
@@ -32,6 +33,7 @@
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.3",
     "@types/react-native": "^0.64.0",
+    "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-native": "^5.1.0",
     "@types/react-test-renderer": "^16.9.2",
