--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": [
-    "airbnb"
+    "airbnb",
+    "plugin:react-hooks/recommended"
   ],
   "plugins": [
     "@typescript-eslint",
