--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-firebase/app": "^11.1.2",
+    "@react-native-firebase/auth": "^11.2.0",
     "@react-native-firebase/messaging": "^11.1.2",
     "history": "^5.0.0",
     "native-base": "^2.15.2",
